3.11.0/_sources/gallery/lines_bars_and_markers/barh.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines_bars_and_markers/barh.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. meta::
        :keywords: codex

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_lines_bars_and_markers_barh.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_barh.py:


====================
Horizontal bar chart
====================

This example showcases a simple horizontal bar chart.

.. GENERATED FROM PYTHON SOURCE LINES 8-24

.. code-block:: Python

    import matplotlib.pyplot as plt

    fig, ax = plt.subplots()

    # Example data
    people = ('Tom', 'Dick', 'Harry', 'Slim', 'Jim')
    performance = [5, 7, 6, 4, 9]
    error = [0.2, 0.4, 0.3, 0.6, 0.2]

    ax.barh(people, performance, xerr=error, align='center')
    ax.yaxis.set_inverted(True)  # arrange data from top to bottom
    ax.set_xlabel('Performance')
    ax.set_title('How fast do you want to go today?')

    plt.show()




.. image-sg:: /gallery/lines_bars_and_markers/images/sphx_glr_barh_001.png
   :alt: How fast do you want to go today?
   :srcset: /gallery/lines_bars_and_markers/images/sphx_glr_barh_001.png, /gallery/lines_bars_and_markers/images/sphx_glr_barh_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 25-29

.. tags::

   plot-type: bar
   level: beginner


.. _sphx_glr_download_gallery_lines_bars_and_markers_barh.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: barh.ipynb <barh.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: barh.py <barh.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: barh.zip <barh.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
